--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "connect-pug-static": "^0.2.0",
     "express": "^4.16.3",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "morgan": "^1.9.0",
     "node-sass-middleware": "^0.11.0",
+    "popper.js": "^1.14.1",
     "sass-module-importer": "^1.4.0"
   }
 }
